--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,11 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.0/mapbox-gl.css"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
   <body class="mat-typography">
     <ay-app></ay-app>
